--- a/hackathonProject/BananaDash/templates/BananaDash/index.html
+++ b/hackathonProject/BananaDash/templates/BananaDash/index.html
@@ -18,23 +18,15 @@
 </head>
 <body>
     <header>
+        <img src="{% static 'BananaDash/bananapic.png' %}"></img>
         <h1>Welcome to Banana Bonanza!</h1>
     </header>
-    <div id="container" style="width: 100%; height: 400px;">
+    <div id="container" style="width: 90%; height: 400px;">
         <script src="{% static 'BananaDash/stocks.js' %}"></script>
     </div>
 
     <main>
         
-
-        <section class="banana-info">
-            <h2>Why Bananas Are Great</h2>
-            <p>Bananas are full of vitamins and minerals, they're a great source of energy, and they can be used in a variety of recipes. Plus, they come in their own convenient packaging!</p>
-            <button onclick="showBananaFact()">Show me a banana fact</button>
-
-            <script src="{% static 'BananaDash/RandomBananafact.js' %}"></script>
-            <div id="bananaFactDisplay" style="margin-top: 20px; font-size: 20px;"></div>
-
         </section>
         <section class="flex-container">
             <div>
@@ -47,7 +39,14 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div>2</div>
+            <div>
+                <h2>Why Bananas Are Great</h2>
+                <p>Bananas are full of vitamins and minerals, they're a great source of energy, and they can be used in a variety of recipes. Plus, they come in their own convenient packaging!</p>
+                <button onclick="showBananaFact()">Show me a banana fact</button>
+    
+                <script src="{% static 'BananaDash/RandomBananafact.js' %}"></script>
+                <div id="bananaFactDisplay" style="margin-top: 20px; font-size: 20px;"></div>
+            </div>
         </section>
     </main>
     <footer>
